
[metadata]
name             = pymodbus
version          = attr: pymodbus.__version__
author           = attr: pymodbus.__author__
maintainer       = attr: pymodbus.__maintainer__
license          = 'BSD-3-Clause'
platforms        = 'Linux', 'Mac OS X', 'Win'
description      = "A fully featured modbus protocol stack in python"
keywords         = 'modbus, asyncio, scada, client, server, simulator'
long_description = file: README.rst, CHANGELOG.rst, LICENSE
url              = 'https://github.com/riptideio/pymodbus/'
classifiers      = 
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.8 :: 3.9 :: 3.10
    Environment :: Console
    Framework :: Twisted :: Tornado :: Asyncio
    Intended Audience :: Developers :: Modbus testers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent :: Linux :: Windows :: Mac OS
    Programming Language :: Python :: 3.8
    Topic :: System :: Networking :: Utilities :: SCADA :: Modbus
project_urls     =
    Source Code  = https://github.com/riptideio/pymodbus
    Bug Reports  = https://github.com/riptideio/pymodbus/issues
    Docs: Dev    = https://pymodbus.readthedocs.io/en/latest/?badge=latest
    Discord      = https://discord.gg/vcP8qAz2



[options]
packages             = find:
include_package_data = True
zip_safe             = True
python_requires      = >=3.8.0
#install_requires    --> setup.py
#extras_require      --> setup.py
#cmdclass            --> setup.py


[options.exclude_package_data]
'' =
    examples
    test
    tools
    doc


[options.entry_points]
console_scripts =
    pymodbus.console = pymodbus.repl.client.main:main
    pymodbus.server  = pymodbus.repl.server.main:server


[options.packages.find]
include = pymodbus*

[flake8]
exclude         = .venv,.git,.tox,venv,build
max-complexity  = 25
doctests        = True
max-line-length = 120
# To work with Black 
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    D202,
    E501,
    E203,
    W503,
    W504,

    D211,
    D400,
    E251,
    E731,
    W503
noqa-require-code = True






[aliases]
upload_docs = build_sphinx upload_docs
package = build_apidocs build_sphinx sdist
test=pytest

[egg_info]
#tag_build = dev
tag_svn_revision = false


[build-sphinx]
source-dir = doc/sphinx/
build-dir  = doc/sphinx/build
all_files  = 1

[upload_docs]
upload_dir = build/sphinx/html

[bdist_wheel]
universal=1

[tool:pytest]
testpaths = test
addopts = -p no:warnings
